2008-03-24  Benjamin Drung  <benjamin.drung@gmail.com>

	* [r39] src/dvdbackup.c (DVDCopyMenu): changed invalid DVD size error to
	  warning

	* [r38] src/dvdbackup.c:
	  - (DVDGetFileSet): Cleanup.
	  - Replaced 2048 with DVD_VIDEO_LB_LEN (defined in dvdread/dvd_reader.h)
	  - created constant BUFFER_SIZE
	  - replaced vobsize with MAX_VOB_SIZE

	* [r37] src/dvdbackup.c (DVDCopyMenu): Error messages prints filename.

2008-03-20  Benjamin Drung  <benjamin.drung@gmail.com>

	* [r33] configure.ac, NEWS, po/dvdbackup.pot: Released version 0.2

2008-03-20  Stephen Gran  <sgran@debian.org>

	* [r32] debian/rules: switch to running make install with DESTDIR set,
           and then install from there.

	* [r31] debian/rules build changes for new autoconf system

	* [r30] Change footer on manpage - now part of main tarball

	* [r29] Rename debian/README to debian/README.Debian

2008-03-18  Benjamin Drung  <benjamin.drung@gmail.com>

	* [r28] README, man/dvdbackup.1: Synchronized.

2008-03-17  Benjamin Drung  <benjamin.drung@gmail.com>

	* [r27] configure.ac: added checks suggested by autoscan

	* [r27] Makefile.am: NEWS and README are now installed in docdir
	* [r27] man/Makefile.am: Updated.

	* [r27] NEWS: Updated.

	* [r26] README: changed spaces to tabs

	* [r26] man/dvdbackup.1: updated options

	* [r26] src/dvdbackup.c, src/dvdbackup.h, src/main.c: fixed typos
	  - DVD instead of dvd
	  - DVDs instead of DVD's
	  - used cannot instead of can't, do not instead of don't

2008-03-11  Benjamin Drung  <benjamin.drung@gmail.com>

	* [r25] ChangeLog: Updated.
	
	* [r25] debian/dvdbackup.1: moved from here...
	* [r25] man/dvdbackup.1: ...to here
	* [r25] configure.ac, Makefile.am, man/Makefile.am:
	  added man page to distribution

2008-03-11  Stephen Gran  <sgran@debian.org>

	* [r18] INSTALL: update to newest version

	* [r17] configure.ac: Use getconf to find LFS CFLAGS

	* [r16] debian/*: Bring up to date with Debian
